--- a/index.html
+++ b/index.html
@@ -1,136 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
 
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-</head>
+        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+            integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    </head>
 
-<body>
-    <header>
-        <nav class="navbar has-background-light p-3">
-            <div class="navbar-brand">
-                <span class="icon">
-                    <i class></i>
-                </span>
+    <body>
+        <header>
+            <nav class="navbar has-background-light p-3">
+                <div class="navbar-brand">
+                    <span class="icon">
+                        <i class></i>
+                    </span>
+                </div>
+                <div class="navbar-end">
+                    <a href="#text" class="button is-light">Contenu</a>
+                    <a href="#dataviz1" class="button is-light">Dataviz 1</a>
+                    <a href="#dataviz2" class="button is-light">Dataviz 2</a>
+                </div>
+            </nav>
+        </header>
+        <main class="m-6">
+            <div class="columns is-8">
+                <div class="column">
+                    <h1 class="title is-1">Le Titre Lorem Ipsum Dolor Sit
+                        Amet</h1>
+                    <p class="is-size-5">À l’heure de la transition énergétique,
+                        le renouvelable semble être la solution pour s’émanciper
+                        des énergies fossiles. Mais qu’en est-il du nucléaire ?
+                        Souvent critiqué, c’est pourtant une énergie qui émet
+                        peu de GES, et permet une production qui est pilotable,
+                        contrairement aux énergies renouvelables, soumises aux
+                        éléments pour en produire.</p>
+                </div>
+                <div class="column">
+                    <img src="img/test.png" class="image" alt>
+                </div>
             </div>
-            <div class="navbar-end">
-                <a href="#text" class="button is-light">Contenu</a>
-                <a href="#dataviz1" class="button is-light">Dataviz 1</a>
-                <a href="#dataviz2" class="button is-light">Dataviz 2</a>
+            <div class="columns" id="text">
+                <div class="column">
+                    <p class="is-size-5">"Sed ut perspiciatis unde omnis iste
+                        natus error sit voluptatem accusantium
+                        doloremque laudantium, totam rem aperiam, eaque ipsa
+                        quae ab illo inventore veritatis et quasi
+                        architecto beatae vitae dicta sunt explicabo. Nemo enim
+                        ipsam voluptatem quia voluptas sit
+                        aspernatur aut odit aut fugit, sed quia consequuntur
+                        magni dolores eos qui ratione voluptatem sequi
+                        nesciunt. Neque porro quisquam est, qui dolorem ipsum
+                        quia dolor sit amet, consectetur, adipisci
+                        velit, sed quia non numquam eius modi tempora incidunt
+                        ut labore et dolore magnam aliquam quaerat
+                        voluptatem. Ut enim ad minima veniam, quis nostrum
+                        exercitationem ullam corporis suscipit
+                        laboriosam, nisi ut aliquid ex ea commodi consequatur?
+                        Quis autem vel eum iure reprehenderit qui in
+                        ea voluptate velit esse quam nihil molestiae
+                        consequatur, vel illum qui dolorem eum fugiat quo
+                        voluptas nulla pariatur?"</p>
+                </div>
+                <div class="column">
+                    <p class="is-size-5">
+                        "At vero eos et accusamus et iusto odio dignissimos
+                        ducimus qui blanditiis praesentium voluptatum
+                        deleniti atque corrupti quos dolores et quas molestias
+                        excepturi sint occaecati cupiditate non
+                        provident, similique sunt in culpa qui officia deserunt
+                        mollitia animi, id est laborum et dolorum
+                        fuga. Et harum quidem rerum facilis est et expedita
+                        distinctio. Nam libero tempore, cum soluta nobis
+                        est eligendi optio cumque nihil impedit quo minus id
+                        quod maxime placeat facere possimus, omnis
+                        voluptas assumenda est, omnis dolor repellendus.
+                        Temporibus autem quibusdam et aut officiis debitis
+                        aut rerum necessitatibus saepe eveniet ut et voluptates
+                        repudiandae sint et molestiae non
+                        recusandae. Itaque earum rerum hic tenetur a sapiente
+                        delectus, ut aut reiciendis voluptatibus
+                        maiores alias consequatur aut perferendis doloribus
+                        asperiores repellat."
+                    </p>
+                </div>
             </div>
-        </nav>
-    </header>
-    <main class="m-6">
-        <div class="columns is-8">
-            <div class="column">
-                <h1 class="title is-1">Le Titre Lorem Ipsum Dolor Sit
-                    Amet</h1>
-                <p class="is-size-5">À l’heure de la transition énergétique,
-                    le renouvelable semble être la solution pour s’émanciper
-                    des énergies fossiles. Mais qu’en est-il du nucléaire ?
-                    Souvent critiqué, c’est pourtant une énergie qui émet
-                    peu de GES, et permet une production qui est pilotable,
-                    contrairement aux énergies renouvelables, soumises aux
-                    éléments pour en produire.</p>
+            <div class="columns">
+                <div class="column">
+                    <img src="img/test.png" class="image" alt>
+                </div>
+                <div class="column">
+                    <h1 class="title is-2">Lorem Ipsum Dolor Sit
+                        Amet
+                    </h1>
+                    <p class="is-size-5">
+                        "At vero eos et accusamus et iusto odio dignissimos
+                        ducimus qui blanditiis praesentium voluptatum
+                        deleniti atque corrupti quos dolores et quas molestias
+                        excepturi sint occaecati cupiditate non
+                        provident, similique sunt in culpa qui officia deserunt
+                        mollitia animi, id est laborum et dolorum
+                        fuga. Et harum quidem rerum facilis est et expedita
+                        distinctio. Nam libero tempore, cum soluta nobis
+                        est eligendi optio cumque nihil impedit quo minus id
+                        quod maxime placeat facere possimus, omnis
+                        voluptas assumenda est, omnis dolor repellendus.
+                        Temporibus autem quibusdam et aut officiis debitis
+                        aut rerum necessitatibus saepe eveniet ut et voluptates
+                        repudiandae sint et molestiae non
+                        recusandae. Itaque earum rerum hic tenetur a sapiente
+                        delectus, ut aut reiciendis voluptatibus
+                        maiores alias consequatur aut perferendis doloribus
+                        asperiores repellat."
+                    </p>
+                </div>
             </div>
-            <div class="column">
-                <img src="img/test.png" class="image" alt>
+            <h2 class="title is-2 mt-6" id="dataviz1">Production d’énergie
+                (électricité) pour le nucléaire de 1965 à 2023,
+                comparée à celle des énergies fossiles et des énergies
+                renouvelables.</h2>
+            <div class="container" id="dataviz">
+                <canvas id="chart1">
+                </canvas>
+                <p is-5 mt-3>Oe oe oe du texte du texte du texte</p>
             </div>
-        </div>
-        <div class="columns" id="text">
-            <div class="column">
-                <p class="is-size-5">"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-                    doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-                    architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
-                    aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi
-                    nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
-                    velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat
-                    voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit
-                    laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in
-                    ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo
-                    voluptas nulla pariatur?"</p>
-            </div>
-            <div class="column">
-                <p class="is-size-5">
-                    "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
-                    deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non
-                    provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum
-                    fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis
-                    est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis
-                    voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis
-                    aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non
-                    recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus
-                    maiores alias consequatur aut perferendis doloribus asperiores repellat."
+            <h2 class="title is-2 mt-6" id="dataviz2">Répartition des énergies
+                dans la consommation énergétique mondiale</h2>
+            <div class="container" id="dataviz">
+                <canvas id="chart2">
+                </canvas>
+                <select name="colors" id="col-select"> 
+                    <option value="#e6362270">Red</option> 
+                        <option value="#22a1e670">Blue</option> 
+                        <option value="#1cad4770">Green</option> 
+                        <option value="#ffee0070">Yellow</option> 
+                    </select>
+                    <select name="datasets" id="data-select"> 
+                        <option value="0">Dataset 1</option> 
+                        <option value="1">Dataset 2</option> 
+                        </select>
+                </div>
+                <p class="text is-5 mt-3">Peut être ici expliquer tout ce qui
+                    est
+                    calculs/moyennes/etc et citer les sources. "At vero eos et
+                    accusamus et iusto
+                    odio dignissimos ducimus qui blanditiis praesentium
+                    voluptatum
+                    deleniti
+                    atque corrupti quos dolores et quas molestias excepturi sint
+                    occaecati
+                    cupiditate non provident, similique sunt in culpa qui
+                    officia
+                    deserunt
+                    mollitia animi, id est laborum et dolorum fuga.
+                    Itaque earum rerum hic tenetur a sapiente delectus
+                    asperiores
+                    repellat."
                 </p>
-            </div>
-        </div>
-        <div class="columns">
-            <div class="column">
-                <img src="img/test.png" class="image" alt>
-            </div>
-            <div class="column">
-                <h1 class="title is-2">Lorem Ipsum Dolor Sit
-                    Amet
-                </h1>
-                <p class="is-size-5">
-                    "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
-                    deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non
-                    provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum
-                    fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis
-                    est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis
-                    voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis
-                    aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non
-                    recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus
-                    maiores alias consequatur aut perferendis doloribus asperiores repellat."
-                </p>
-            </div>
-        </div>
-        <h2 class="title is-2 mt-6" id="dataviz1">Production d’énergie (électricité) pour le nucléaire de 1965 à 2023,
-            comparée à celle des énergies fossiles et des énergies renouvelables.</h2>
-        <div class="container" id="dataviz">
-            <canvas id="chart1">
-            </canvas>
-            <p is-5 mt-3>Oe oe oe du texte du texte du texte</p>
-        </div>
-        <h2 class="title is-2 mt-6" id="dataviz2">Répartition des énergies
-            dans la consommation énergétique mondiale</h2>
-        <div class="container" id="dataviz">
-            <canvas id="chart2">
-            </canvas>
-        </div>
-        <p class="text is-5 mt-3">Peut être ici expliquer tout ce qui est
-            calculs/moyennes/etc et citer les sources. "At vero eos et
-            accusamus et iusto
-            odio dignissimos ducimus qui blanditiis praesentium voluptatum
-            deleniti
-            atque corrupti quos dolores et quas molestias excepturi sint
-            occaecati
-            cupiditate non provident, similique sunt in culpa qui officia
-            deserunt
-            mollitia animi, id est laborum et dolorum fuga.
-            Itaque earum rerum hic tenetur a sapiente delectus asperiores
-            repellat."
-        </p>
-    </main>
-    <footer class="footer">
-        <div class="content has-text-centered">
-            <p>
-                Lorem Ipsum dolor sit amet
-            </p>
-        </div>
-    </footer>
-</body>
+            </main>
+            <footer class="footer">
+                <div class="content has-text-centered">
+                    <p>
+                        Lorem Ipsum dolor sit amet
+                    </p>
+                </div>
+            </footer>
+        </body>
 
-<script>
+        <script>
 
     let years = [];
     for (let year = 1965; year <= 2023; year++) {
@@ -174,9 +219,21 @@
 
     let greenhouseGasEmission = [970, 920, 440, 230, 24, 11, 6, 53];
 
+    let labels2 = ["1", "2", "3", "4", "5", "6", "7", "8"]
+
+    const DATASETS = [[deathRate], [greenhouseGasEmission]]
+
     console.log(nuclearEnergyTWh)
     let ctx1 = document.getElementById('chart1');
     let ctx2 = document.getElementById('chart2');
+
+    //La fonction permettant de changer de dataset
+    function handleDataChange(chart, datasetIndex){ 
+        chart.data.datasets[0].data = DATASETS[datasetIndex]; 
+        chart.update(); }
+
+        const datasetSel = document.getElementById("data-select"); 
+        datasetSel.onchange = () => {handleDataChange(chart, datasetSel.value)};
 
     new Chart(ctx1, {
         type: 'line',
@@ -205,16 +262,14 @@
 
     new Chart(ctx2,{
             type: "polarArea",
-            data: chartData,
-            options: {
-                elements: {
-                    arc: {
-                        angle: [90, 120, 20, 20]
-                    }
-                }
-            }
-        });
+            data: deathRate,
+            labels: labels2,
+  datasets: [{
+    label: 'My First Dataset',
+    data: DATASETS[0],
+  }]
+});
 
 </script>
 
-</html>
+    </html>
